Find the number of rows and columns

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -260,6 +260,27 @@
     "# Explore the first few rows\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000098, 52)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the number of rows and columns\n",
+    "data.shape"
+   ]
   }
  ],
  "metadata": {
