Summary of Missing data

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -281,6 +281,204 @@
     "# Find the number of rows and columns\n",
     "data.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning\n",
+    "Handle missing or incomplete data: Since the dataset spans several categories, some fields may have missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing Count</th>\n",
+       "      <th>Percentage (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NumberOfVehiclesInFleet</th>\n",
+       "      <td>1000098</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CrossBorder</th>\n",
+       "      <td>999400</td>\n",
+       "      <td>99.930207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomValueEstimate</th>\n",
+       "      <td>779642</td>\n",
+       "      <td>77.956560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WrittenOff</th>\n",
+       "      <td>641901</td>\n",
+       "      <td>64.183810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converted</th>\n",
+       "      <td>641901</td>\n",
+       "      <td>64.183810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rebuilt</th>\n",
+       "      <td>641901</td>\n",
+       "      <td>64.183810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NewVehicle</th>\n",
+       "      <td>153295</td>\n",
+       "      <td>15.327998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bank</th>\n",
+       "      <td>145961</td>\n",
+       "      <td>14.594670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AccountType</th>\n",
+       "      <td>40232</td>\n",
+       "      <td>4.022806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <td>9536</td>\n",
+       "      <td>0.953507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MaritalStatus</th>\n",
+       "      <td>8259</td>\n",
+       "      <td>0.825819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mmcode</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VehicleType</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>make</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VehicleIntroDate</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberOfDoors</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bodytype</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kilowatts</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cubiccapacity</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cylinders</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <td>552</td>\n",
+       "      <td>0.055195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CapitalOutstanding</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Missing Count  Percentage (%)\n",
+       "NumberOfVehiclesInFleet        1000098      100.000000\n",
+       "CrossBorder                     999400       99.930207\n",
+       "CustomValueEstimate             779642       77.956560\n",
+       "WrittenOff                      641901       64.183810\n",
+       "Converted                       641901       64.183810\n",
+       "Rebuilt                         641901       64.183810\n",
+       "NewVehicle                      153295       15.327998\n",
+       "Bank                            145961       14.594670\n",
+       "AccountType                      40232        4.022806\n",
+       "Gender                            9536        0.953507\n",
+       "MaritalStatus                     8259        0.825819\n",
+       "mmcode                             552        0.055195\n",
+       "VehicleType                        552        0.055195\n",
+       "make                               552        0.055195\n",
+       "VehicleIntroDate                   552        0.055195\n",
+       "NumberOfDoors                      552        0.055195\n",
+       "bodytype                           552        0.055195\n",
+       "kilowatts                          552        0.055195\n",
+       "cubiccapacity                      552        0.055195\n",
+       "Cylinders                          552        0.055195\n",
+       "Model                              552        0.055195\n",
+       "CapitalOutstanding                   2        0.000200"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the Class to data processing\n",
+    "\n",
+    "from data_processing import DataProcessing\n",
+    "# Create instance of the class\n",
+    "data_processing = DataProcessing(data)\n",
+    "\n",
+    "# Summary of Missing data\n",
+    "missing_summary = data_processing.missing_data_summary()\n",
+    "\n",
+    "# Display results\n",
+    "missing_summary"
+   ]
   }
  ],
  "metadata": {
