Drop these columns the most missing value columns

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -479,6 +479,37 @@
     "# Display results\n",
     "missing_summary"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop Columns with High Missing Data:\n",
+    "\n",
+    "Columns with high missing values offer little analytical value.\n",
+    "Dropped Columns\n",
+    "\n",
+    "NumberOfVehiclesInFleet (100% missing)\n",
+    "CrossBorder (~99.93%)\n",
+    "CustomValueEstimate (~77.96%)\n",
+    "Converted, Rebuilt, WrittenOff (~64.18%)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_to_drop = ['NumberOfVehiclesInFleet', \n",
+    "                'CrossBorder', \n",
+    "                'CustomValueEstimate', \n",
+    "                'Converted', 'Rebuilt', \n",
+    "                'WrittenOff']\n",
+    "\n",
+    "# Drop these columns\n",
+    "data = data_processing.handle_missing_data('high', cols_to_drop)"
+   ]
   }
  ],
  "metadata": {
