drop columns with moderate missing data

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,6 +509,32 @@
     "\n",
     "# Drop these columns\n",
     "data = data_processing.handle_missing_data('high', cols_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impute Moderate Missing Data:\n",
+    "\n",
+    "Imputation preserves useful information, using the mode for categorical and median for numerical columns.\n",
+    "Imputed Columns:\n",
+    "\n",
+    "NewVehicle (~15.33%)\n",
+    "Bank (~14.59%)\n",
+    "AccountType (~4.02%)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Impute or drop columns with moderate missing data\n",
+    "missing_cols = ['NewVehicle', 'Bank', 'AccountType']\n",
+    "data = data_processing.handle_missing_data('moderate', missing_cols)"
    ]
   }
  ],
