--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -536,6 +536,61 @@
     "missing_cols = ['NewVehicle', 'Bank', 'AccountType']\n",
     "data = data_processing.handle_missing_data('moderate', missing_cols)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overall Decision Summary:\n",
+    "\n",
+    "High missing data: Dropped.\n",
+    "\n",
+    "Moderate missing data: Imputed with mode (categorical) or median (numerical).\n",
+    "\n",
+    "Low missing data: Imputed to avoid unnecessary data loss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(74)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check duplicates\n",
+    "data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summarize Key Statistics\n",
+    "\n",
+    "### Descriptive statistics:\n",
+    "In the descriptive statistics calculate and examine the variability for numerical features such as TotalPremium, TotalClaim, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Statistic summary of numerical features\n",
+    "num_cols = ['SumInsured', 'CalculatedPremiumPerTerm', 'TotalPremium', 'TotalClaims']\n",
+    "display(data[num_cols].describe())"
+   ]
   }
  ],
  "metadata": {
