Converts the VehicleIntroDate column from object to datetime format

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -591,6 +591,380 @@
     "num_cols = ['SumInsured', 'CalculatedPremiumPerTerm', 'TotalPremium', 'TotalClaims']\n",
     "display(data[num_cols].describe())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights:\n",
+    "\n",
+    "Skewness: The data for all columns is highly skewed with a long tail of high values (especially for SumInsured, CalculatedPremiumPerTerm, TotalPremium, and TotalClaims). The mean values are much higher than the medians, which implies a small number of high-value policies and premiums influence the average.\n",
+    "\n",
+    "Outliers: Significant outliers exist, particularly in TotalPremium and TotalClaims, where negative values could indicate refunds or adjustments, while high values drive the average up.\n",
+    "\n",
+    "Majority of Policies: The majority of policies have small insured sums, low premiums, and zero claims, as indicated by the 50th and 75th percentiles being much lower than the maximum values.\n",
+    "\n",
+    "These insights suggest that a large proportion of the policies are low in terms of both insured amounts and premiums, while a small number of high-value policies dominate the high-end of the distributions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Structure Review:\n",
+    "\n",
+    "It's important to review the data types to ensure that:\n",
+    "\n",
+    "Numerical Columns are in the correct numeric format (int, float).\n",
+    "Categorical Variables (e.g., Gender, PolicyType) are encoded as categories or objects.\n",
+    "Dates are formatted as datetime for proper time-series analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>data type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UnderwrittenCoverID</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PolicyID</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TransactionMonth</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IsVATRegistered</td>\n",
+       "      <td>bool</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Citizenship</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LegalType</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Title</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Language</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Bank</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AccountType</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>MaritalStatus</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Gender</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Country</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Province</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>PostalCode</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>MainCrestaZone</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>SubCrestaZone</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>ItemType</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>mmcode</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>VehicleType</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>RegistrationYear</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>make</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Model</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Cylinders</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>cubiccapacity</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>kilowatts</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>bodytype</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>NumberOfDoors</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>VehicleIntroDate</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>AlarmImmobiliser</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>TrackingDevice</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>CapitalOutstanding</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>NewVehicle</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>SumInsured</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>TermFrequency</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>CalculatedPremiumPerTerm</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>ExcessSelected</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>CoverCategory</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>CoverType</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>CoverGroup</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Section</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Product</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>StatutoryClass</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>StatutoryRiskType</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>TotalPremium</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>TotalClaims</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       index data type\n",
+       "0        UnderwrittenCoverID     int64\n",
+       "1                   PolicyID     int64\n",
+       "2           TransactionMonth    object\n",
+       "3            IsVATRegistered      bool\n",
+       "4                Citizenship    object\n",
+       "5                  LegalType    object\n",
+       "6                      Title    object\n",
+       "7                   Language    object\n",
+       "8                       Bank    object\n",
+       "9                AccountType    object\n",
+       "10             MaritalStatus    object\n",
+       "11                    Gender    object\n",
+       "12                   Country    object\n",
+       "13                  Province    object\n",
+       "14                PostalCode     int64\n",
+       "15            MainCrestaZone    object\n",
+       "16             SubCrestaZone    object\n",
+       "17                  ItemType    object\n",
+       "18                    mmcode   float64\n",
+       "19               VehicleType    object\n",
+       "20          RegistrationYear     int64\n",
+       "21                      make    object\n",
+       "22                     Model    object\n",
+       "23                 Cylinders   float64\n",
+       "24             cubiccapacity   float64\n",
+       "25                 kilowatts   float64\n",
+       "26                  bodytype    object\n",
+       "27             NumberOfDoors   float64\n",
+       "28          VehicleIntroDate    object\n",
+       "29          AlarmImmobiliser    object\n",
+       "30            TrackingDevice    object\n",
+       "31        CapitalOutstanding    object\n",
+       "32                NewVehicle    object\n",
+       "33                SumInsured   float64\n",
+       "34             TermFrequency    object\n",
+       "35  CalculatedPremiumPerTerm   float64\n",
+       "36            ExcessSelected    object\n",
+       "37             CoverCategory    object\n",
+       "38                 CoverType    object\n",
+       "39                CoverGroup    object\n",
+       "40                   Section    object\n",
+       "41                   Product    object\n",
+       "42            StatutoryClass    object\n",
+       "43         StatutoryRiskType    object\n",
+       "44              TotalPremium   float64\n",
+       "45               TotalClaims   float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the Data types of each column\n",
+    "\n",
+    "data_types = data.dtypes\n",
+    "\n",
+    "data_types.reset_index(name='data type')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Since the VehicleIntroDate column is of type object, it should be transformed into a proper date format (datetime). This transformation is essential for performing time-based analysis or working with date-related features effectivel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converts the VehicleIntroDate column from object to datetime format.\n",
+    "\n",
+    "data['VehicleIntroDate'] = pd.to_datetime(data['VehicleIntroDate'], format='%d/%m/%Y', errors='coerce')  # Convert with error handling"
+   ]
   }
  ],
  "metadata": {
