--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1167,6 +1167,47 @@
     "# Plot the plot of both numerical and categorical columns\n",
     "vis.univariate_analysis(numerical_cols, categorical_cols)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights from Univariate Analysis\n",
+    "\n",
+    "Numerical Variables:\n",
+    "\n",
+    "Sum Insured: The distribution is right-skewed, with most policies having lower sums insured and a few with very high amounts. This indicates a diverse range of policy values, with clusters around specific sums suggesting potential policy tiers.\n",
+    "\n",
+    "Calculated Premium Per Term: This variable is also right-skewed, with a peak around a specific amount and variability in premiums. The presence of significantly higher premiums reflects pricing differences among policies.\n",
+    "\n",
+    "Total Premium: The distribution is right-skewed, with most policies showing lower total premiums and a peak around zero. High total premiums may be due to refunds or high-risk factors.\n",
+    "\n",
+    "Overall, these distributions reveal a wide range of policy values and premiums, with identifiable clusters and outliers that can aid in risk assessment and pricing strategies.\n",
+    "\n",
+    "Categorical Variables:\n",
+    "\n",
+    "Legal Type: Most policies are issued to individuals, indicating a focus on personal insurance. Private companies and close corporations have fewer policies, with public companies, partnerships, and sole proprietorships being even less common.\n",
+    "\n",
+    "Marital Status: A significant portion of data has \"Not specified\" for marital status, suggesting incomplete information. Single and married individuals are less represented, highlighting potential issues with data collection or privacy concerns.\n",
+    "\n",
+    "Province: Gauteng has the highest number of policies, with Western Cape and KwaZulu-Natal showing moderate numbers. Other provinces have fewer policies, indicating a concentration of market presence in specific regions.\n",
+    "\n",
+    "Vehicle Type: Passenger vehicles dominate, with fewer policies for commercial vehicle types (medium, heavy, light, and bus). This underscores the company's focus on passenger vehicles.\n",
+    "\n",
+    "Gender: A substantial portion of data has \"Not specified\" for gender, indicating missing information. Male and female categories are present but less common, suggesting potential gaps in data collection or reporting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
