--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1231,6 +1231,30 @@
     "# Plot scatter plot\n",
     "vis.scatter_plot(x_col, y_col, col_hue)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights from the Scatter Plot of Total Premium vs. Total Claims\n",
+    "\n",
+    "Relationship: There is a weak positive correlation between total premium and total claims, indicating that higher premiums generally correspond to higher claims, though the relationship is not strong.\n",
+    "\n",
+    "Clustering: Most data points cluster in the lower ranges for both total premiums and claims, suggesting many policies have minimal claims.\n",
+    "\n",
+    "Outliers: A few outliers with very high premiums or claims, or both, could represent policies with unique characteristics that require further investigation.\n",
+    "\n",
+    "Postal Code Impact: While color-coding by postal code suggests possible regional variations, no clear pattern emerges from the plot, requiring further analysis to explore regional impacts.\n",
+    "\n",
+    "Overall: The scatter plot shows a general but weak relationship between premiums and claims, with common clusters and a few notable outliers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
