--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1286,6 +1286,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Comparison\n",
+    "\n",
+    "Trends Over Geography: Compare the change in insurance cover type, premium, auto make, etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
