--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1325,6 +1325,32 @@
     "plt.xticks(rotation=90)  # Rotate labels to the bottom\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cover Type Insights for Optimizing Insurance Offerings\n",
+    "\n",
+    "Dominant Cover Types:\n",
+    "The most common cover types are \"Own Damage,\" \"Passenger Liability,\" \"Windscreen,\", \"Third Party\", \"Keys and Alarms\", Signage and Vehicle Wraps\", \"Emergency Charges\", and \"Cleaning and Removal of Accidental Debris\"\n",
+    "\n",
+    "Action: Focus marketing efforts on these core offerings as they drive the majority of customer demand.\n",
+    "\n",
+    "Less Frequent Cover Types:\n",
+    "Products like \"Income Protector,\" \"Accidental Death,\" and \"Credit Protection\" are less commonly chosen.\n",
+    "\n",
+    "Action: Market these as optional add-ons or bundle them with core products to increase uptake. 3. Skewed Distribution:\n",
+    "\n",
+    "The distribution shows a strong preference for a few cover types, while others are rarely chosen.\n",
+    "\n",
+    "Action: Adjust pricing strategies to reflect the popularity of these cover types, offering promotions for less popular ones.\n",
+    "\n",
+    "Further Opportunities:\n",
+    "Regional Preferences: Analyze cover type trends by region to customize offerings. Customer Segmentation: Tailor marketing and products to customer segments based on their cover type choices.\n",
+    "\n",
+    "Trend Monitoring: Track changes in cover type preferences over time to stay ahead of emerging trends."
+   ]
   }
  ],
  "metadata": {
