common cover types

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1351,6 +1351,23 @@
     "\n",
     "Trend Monitoring: Track changes in cover type preferences over time to stay ahead of emerging trends."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the most common cover types\n",
+    "common_cover_types = [\n",
+    "    'Own Damage', 'Passenger Liability', 'Windscreen', 'Third Party', \n",
+    "    'Keys and Alarms', 'Signage and Vehicle Wraps', 'Emergency Charges', \n",
+    "    'Cleaning and Removal of Accidental Debris'\n",
+    "]\n",
+    "\n",
+    "# Plot the distribution accross regions\n",
+    "vis.plot_geographical_trends(common_cover_types)"
+   ]
   }
  ],
  "metadata": {
