Insights and Decisions

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1443,6 +1443,26 @@
     "# Detect outliers using boxplot\n",
     "vis.plot_outliers_boxplot(numerical_cols)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights and Decisions\n",
+    "\n",
+    "1. TotalPremium:\n",
+    "\n",
+    "Insight: The box plot shows there are a few outliers on the higher end of the data points.\n",
+    "2. SumInsured:\n",
+    "\n",
+    "Insight: The box plot shows a few extreme outliers, significantly higher than the main data range, especially above the 1.2e7 mark.\n",
+    "3. CalculatedPremiumPerTerm:\n",
+    "\n",
+    "Insight: The box plot highlights a few significant outliers, especially around the 70,000 mark, far removed from the core data.\n",
+    "4. TotalClaims:\n",
+    "\n",
+    "Insight: Several extreme outliers, particularly those above 100,000, are present, indicating a high variance that could mislead future analysis. The median is around 100,000. There are a few outliers on the higher end."
+   ]
   }
  ],
  "metadata": {
