Capping outliers of the numerical variables

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1463,6 +1463,17 @@
     "\n",
     "Insight: Several extreme outliers, particularly those above 100,000, are present, indicating a high variance that could mislead future analysis. The median is around 100,000. There are a few outliers on the higher end."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Capping outliers of the numerical variables\n",
+    "\n",
+    "df_capped = vis.cap_all_outliers(numerical_cols)"
+   ]
   }
  ],
  "metadata": {
