--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1474,6 +1474,17 @@
     "\n",
     "df_capped = vis.cap_all_outliers(numerical_cols)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check outliers after the outliers were capped\n",
+    "vis1 = DataVisualizer(df_capped)\n",
+    "vis1.plot_outliers_boxplot(numerical_cols)"
+   ]
   }
  ],
  "metadata": {
