Add code cell to read cleaned dataset from CSV

--- a/notebooks/hypothesis_testing.ipynb
+++ b/notebooks/hypothesis_testing.ipynb
@@ -27,6 +27,16 @@
     "# Add the 'scripts' directory to the Python path for module imports\n",
     "sys.path.append(os.path.abspath(os.path.join('..', 'scripts')))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the dataset\n",
+    "df = pd.read_csv('../data/cleaned_data.csv', low_memory=False, index_col=False)"
+   ]
   }
  ],
  "metadata": {
