--- a/notebooks/hypothesis_testing.ipynb
+++ b/notebooks/hypothesis_testing.ipynb
@@ -37,6 +37,48 @@
     "# Read the dataset\n",
     "df = pd.read_csv('../data/cleaned_data.csv', low_memory=False, index_col=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Risk Differences Across Provinces ---\n",
+      "Chi-squared test on Province and TotalPremium: chi2 = 1675877.9839662637, p-value = 0.0\n",
+      "Reject the null hypothesis.\n",
+      "\n",
+      "--- Risk Differences Between Postal Codes ---\n",
+      "Chi-squared test on PostalCode and TotalPremium: chi2 = 143288895.37515512, p-value = 0.0\n",
+      "Reject the null hypothesis.\n",
+      "\n",
+      "--- Margin Differences Between Postal Codes ---\n",
+      "Z-test on TotalPremium: Z-statistic = -0.3023831651839944, p-value = 0.7623599866851525\n",
+      "Fail to reject the null hypothesis.\n",
+      "\n",
+      "--- Risk Differences Between Women and Men ---\n",
+      "T-test on TotalPremium: T-statistic = -0.36532231271147997, p-value = 0.7148723832930138\n",
+      "Fail to reject the null hypothesis.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the class\n",
+    "from hypothesis_testing import ABHypothesisTesting\n",
+    "ab_test = ABHypothesisTesting(df)\n",
+    "\n",
+    "# Run all tests and print results in a human-readable format\n",
+    "results = ab_test.run_all_tests()\n",
+    "\n",
+    "for test_name, result in results.items():\n",
+    "    print(f'--- {test_name} ---')\n",
+    "    print(result)\n",
+    "    print()  # Print a newline for better readability"
+   ]
   }
  ],
  "metadata": {
