Add data preprocessing imports and configurations to notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -16,7 +16,26 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as stats\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "import os, sys\n",
+    "# Add the 'scripts' directory to the Python path for module imports\n",
+    "sys.path.append(os.path.abspath(os.path.join('..', 'scripts')))\n",
+    "# Set max rows and columns to display\n",
+    "pd.set_option('display.max_columns', 200)\n",
+    "pd.set_option('display.max_rows', 200)"
+   ]
   }
  ],
  "metadata": {
