Add code cell to read the cleaned dataset in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -32,6 +32,16 @@
     "pd.set_option('display.max_columns', 200)\n",
     "pd.set_option('display.max_rows', 200)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the dataset\n",
+    "df = pd.read_csv('../data/cleaned_data.csv', low_memory=False, index_col=False)"
+   ]
   }
  ],
  "metadata": {
