Add code cell to check and drop columns with missing values in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -468,6 +468,48 @@
     "# Explore the first five rows\n",
     "df.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with more than 1 missing value:\n",
+      "Index(['MaritalStatus', 'Gender', 'mmcode', 'VehicleType', 'make', 'Model',\n",
+      "       'Cylinders', 'cubiccapacity', 'kilowatts', 'bodytype', 'NumberOfDoors',\n",
+      "       'VehicleIntroDate', 'CapitalOutstanding'],\n",
+      "      dtype='object')\n",
+      "Columns remaining after dropping:\n",
+      "Index(['Unnamed: 0', 'UnderwrittenCoverID', 'PolicyID', 'TransactionMonth',\n",
+      "       'IsVATRegistered', 'Citizenship', 'LegalType', 'Title', 'Language',\n",
+      "       'Bank', 'AccountType', 'Country', 'Province', 'PostalCode',\n",
+      "       'MainCrestaZone', 'SubCrestaZone', 'ItemType', 'RegistrationYear',\n",
+      "       'AlarmImmobiliser', 'TrackingDevice', 'NewVehicle', 'SumInsured',\n",
+      "       'TermFrequency', 'CalculatedPremiumPerTerm', 'ExcessSelected',\n",
+      "       'CoverCategory', 'CoverType', 'CoverGroup', 'Section', 'Product',\n",
+      "       'StatutoryClass', 'StatutoryRiskType', 'TotalPremium', 'TotalClaims'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check missing values in each column\n",
+    "missing_counts = df.isnull().sum()\n",
+    "\n",
+    "# Print columns with more than 1 missing value\n",
+    "columns_with_missing = missing_counts[missing_counts > 1].index\n",
+    "print(f'Columns with more than 1 missing value:\\n{columns_with_missing}')\n",
+    "\n",
+    "# Drop these columns\n",
+    "df = df.drop(columns=columns_with_missing)\n",
+    "\n",
+    "# Verify the result\n",
+    "print(f'Columns remaining after dropping:\\n{df.columns}')"
+   ]
   }
  ],
  "metadata": {
